# HiL-Serl-Robotics

./: README.md  TESTING.md  install.sh  pyproject.toml  requirements.txt  setup.py
backup-UR-voxel-serl/: pyproject.toml
backup-UR-voxel-serl/examples/: bc_policy.py
backup-UR-voxel-serl/examples/async_bin_relocation_fwbw_drq/: record_transitions.py  train_reward_classifier.py
backup-UR-voxel-serl/examples/async_cable_route_drq/: async_drq_randomized.py
backup-UR-voxel-serl/examples/async_drq_sim/: async_drq_sim.py
backup-UR-voxel-serl/examples/async_pcb_insert_drq/: async_drq_randomized.py
backup-UR-voxel-serl/examples/async_sac_state_sim/: async_sac_state_sim.py
backup-UR-voxel-serl/examples/box_handover_drq/: drq_policy.py  record_demo.py  rlds_analyzer.py  run_actor.sh  run_learner.sh
backup-UR-voxel-serl/examples/box_picking_bc/: bc_policy.py  test_demo.py
backup-UR-voxel-serl/examples/box_picking_drq/: drq_policy.py
backup-UR-voxel-serl/examples/box_picking_drq/color_experiments/VoxNet_g_color/: run_learner.sh
backup-UR-voxel-serl/examples/box_picking_drq/color_experiments/VoxNet_pg/: run_learner.sh
backup-UR-voxel-serl/examples/box_picking_drq/experiment_setup/BT/: bt_policy.py
backup-UR-voxel-serl/serl_launcher/serl_launcher/common/: common.py  optimizers.py
backup-UR-voxel-serl/serl_launcher/serl_launcher/data/: memory_efficient_replay_buffer.py
backup-UR-voxel-serl/serl_launcher/serl_launcher/networks/: actor_critic_nets.py  mlp.py
backup-UR-voxel-serl/serl_launcher/serl_launcher/utils/: sparse_convolution.py
backup-UR-voxel-serl/serl_launcher/serl_launcher/vision/: voxel_grid_encoders.py
backup-UR-voxel-serl/serl_launcher/serl_launcher/wrappers/: dmcgym.py  observation_statistics_wrapper.py  serl_obs_wrappers.py
backup-UR-voxel-serl/serl_robot_infra/: README.md
backup-UR-voxel-serl/serl_robot_infra/franka_env/camera/: rs_capture.py
backup-UR-voxel-serl/serl_robot_infra/franka_env/envs/: franka_env.py
backup-UR-voxel-serl/serl_robot_infra/franka_env/envs/pcb_env/: franka_pcb_insert.py
backup-UR-voxel-serl/serl_robot_infra/franka_env/envs/peg_env/: franka_peg_insert.py
backup-UR-voxel-serl/serl_robot_infra/robot_controllers/: controller_client.py
backup-UR-voxel-serl/serl_robot_infra/ur_env/camera/: camera_parameters.json  render_options.json  rs_capture.py  utils.py  video_capture.py
backup-UR-voxel-serl/serl_robot_infra/ur_env/envs/: dual_wrappers.py  plot_wrapper.py  wrappers.py
backup-UR-voxel-serl/serl_robot_infra/ur_env/envs/camera_env/: box_picking_camera_env.py
backup-UR-voxel-serl/serl_robot_infra/ur_env/envs/handover_env/: __init__.py  box_handover_env.py
backup-UR-voxel-serl/serl_robot_infra/ur_env/spacemouse/: spacemouse_expert.py
backup-UR-voxel-serl/serl_robot_infra/ur_env/utils/: rotations.py  transformations.py
docs/: API.md  CONTROL_MODES.md  (+9 more)
(+214 files in other folders)
