[project]
name = "serl"
version = "0.1.0"
description = "Voxel Serl project dependencies"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "agentlace==1.2",
    "clu==0.0.12",
    "datasets==2.12.0",
    "distrax==0.1.2",
    "einops==0.7.0",
    "flax==0.8.0",
    "gymnasium==0.28.1",
    "huggingface-hub==0.24.2",
    "imageio==2.34.0",
    "jax[cuda12]==0.4.25",
    "jaxlib==0.4.25",
    "keras==3.1.0",
    "matplotlib==3.8.0",
    "ml-collections==0.1.1",
    "numpy==1.26.4",
    "open3d==0.18.0",
    "openai==1.86.0",
    "optax==0.1.5",
    "orbax-checkpoint==0.4.4",
    "oxe-envlogger",
    "pandas==2.2.2",
    "pyrealsense2==2.54.2.5684",
    "pynput>=1.8.1",
    "pyzmq==26.4.0",
    "robotic==0.3.1",
    "scikit-learn==1.5.0",
    "scipy==1.12.0",
    "tensorflow==2.16.1",
    "tensorflow-datasets==4.9.4",
    "tensorflow-probability==0.24.0",
    "tf_keras==2.16.0",
    "tqdm==4.66.2",
    "transformers==4.41.2",
    "ur-rtde==1.5.7",
    "wandb==0.16.4",
    "pyspacemouse>=1.1.4",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
agentlace = { git = "https://github.com/youliangtan/agentlace.git", rev = "main" }
oxe-envlogger = { git = "https://github.com/rail-berkeley/oxe_envlogger", rev = "main" }


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "serl_launcher",
    "serl_robot_infra",
    "ur_env",
    "franka_env",
    "robot_controllers",
]

[tool.setuptools.package-dir]
serl_launcher = "serl_launcher/serl_launcher"
serl_robot_infra = "serl_robot_infra"
ur_env = "serl_robot_infra/ur_env"
robot_controllers = "serl_robot_infra/robot_controllers"
franka_env = "serl_robot_infra/franka_env"
